--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:background="#8BC34A"
     android:paddingHorizontal="30dp"
-    tools:context=".MainActivity">
+    tools:context=".Activity.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -17,10 +17,12 @@
         android:textColor="#0E0808"
         android:textStyle="bold"
         android:textSize="40dp"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp">
+
         <EditText
             android:id="@+id/usernamelogin"
             android:layout_width="match_parent"
@@ -49,6 +51,7 @@
             android:textColor="#000000"/>
 
     </RelativeLayout>
+
     <Button
         android:id="@+id/loginb"
         android:layout_width="match_parent"
@@ -58,6 +61,7 @@
         android:layout_marginTop="30dp"
         android:textSize="25dp"
         android:textAllCaps="false"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,12 +69,14 @@
         android:gravity="center"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="40dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New user?"
             android:textColor="#000000"
             android:textSize="18dp"/>
+
         <TextView
             android:id="@+id/signupli"
             android:layout_width="wrap_content"
@@ -80,8 +86,8 @@
             android:textStyle="bold"
             android:textColor="#000000"
             android:textSize="20dp"/>
-    </LinearLayout>
 
+    </LinearLayout>
 
 
 </LinearLayout>
