--- a/app/src/main/res/layout/editcourse.xml
+++ b/app/src/main/res/layout/editcourse.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="#8BC34A"
+    android:background="@color/white"
     android:paddingHorizontal="30dp">
 
     <TextView
