--- a/app/src/main/res/layout/activity_create_course.xml
+++ b/app/src/main/res/layout/activity_create_course.xml
@@ -22,6 +22,7 @@
             android:gravity="center"
             android:text="Create Course"
             android:textColor="@color/white"
-            android:textSize="30dp"></LinearLayout>
+            android:textSize="30dp" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
