--- a/app/src/main/res/layout/activity_edit_course_as_instructor.xml
+++ b/app/src/main/res/layout/activity_edit_course_as_instructor.xml
@@ -155,22 +155,10 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/firstLecture"
-            android:layout_width="185dp"
-            android:layout_height="50dp" />
-
-        <TextView
-            android:id="@+id/secondLecture"
-            android:layout_width="185dp"
-            android:layout_height="50dp" />
-
-    </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleViewLectures"
+        android:layout_width="300dp"
+        android:layout_height="130dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
