--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,7 +56,7 @@
         android:id="@+id/loginb"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:text="Log in"
+        android:text="Log In"
         android:textColor="#000000"
         android:layout_marginTop="30dp"
         android:textSize="25dp"
@@ -81,7 +81,7 @@
             android:id="@+id/signupli"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign Up"
+            android:text="Sign up"
             android:layout_marginLeft="10dp"
             android:textStyle="bold"
             android:textColor="#000000"
