--- a/app/src/main/res/layout/activity_create_course.xml
+++ b/app/src/main/res/layout/activity_create_course.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:orientation="horizontal"
-            android:background="@color/purple_500"
+            android:background="#ffffff"
             android:gravity="center"
             android:text="Create Course"
             android:textColor="@color/white"
